fixed z-index issue with buttons and modal window

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,11 +71,17 @@ img {
     padding-bottom: 1px;
 }
 
+#tag-button-group {    
+    width: 250px;    
+    display: flex;
+    justify-content: space-evenly;
+}
+
 /* Modal Window */
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 3; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
